# cnc-virtual-sim

./: .gitignore  CMakeLists.txt  README.MD
config/: machine.json
include/helper/: Helper.h
include/logger/: AppLogger.h  Logger.h
include/motion/: MachineConfig.h  MachineState.h  MotionEngine.h  Vec3.h
include/parser/: GCommand.h  GcodeParser.h
include/simulator/: AppConfig.h  CommandQueue.h  Simulator.h  SimulatorException.h
scripts/: visualise.py  visualise3d.py
src/: main.cpp
src/logger/: AppLogger.cpp  Logger.cpp
src/motion/: MachineConfig.cpp  MotionEngine.cpp
src/parser/: GcodeParser.cpp
src/simulator/: AppConfig.cpp  Simulator.cpp
tests/: CMakeLists.txt  test.cpp  test_motion.cpp  test_parser.cpp
tests/programs/: circle.gcode  square.gcode
